xidlc/tests/snapshots/codegen_snapshot__openapi__http_exceptions.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_exceptions.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "FileMeta": {
        "properties": {
          "etag": {
            "type": "string"
          },
          "id": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "etag"
        ],
        "type": "object"
      },
      "NotFound": {
        "properties": {
          "code": {
            "format": "int32",
            "minimum": 0,
            "type": "integer"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "NotModified": {
        "type": "object"
      },
      "PreconditionFailed": {
        "properties": {
          "code": {
            "format": "int32",
            "minimum": 0,
            "type": "integer"
          },
          "detail": {
            "type": "string"
          },
          "message": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "message"
        ],
        "type": "object"
      },
      "left.Detail": {
        "properties": {
          "message": {
            "type": "string"
          }
        },
        "required": [
          "message"
        ],
        "type": "object"
      },
      "left.Failure": {
        "properties": {
          "detail": {
            "$ref": "#/components/schemas/Detail"
          }
        },
        "required": [
          "detail"
        ],
        "type": "object"
      },
      "right.Failure": {
        "properties": {
          "reason": {
            "type": "string"
          }
        },
        "required": [
          "reason"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "Demo API",
    "version": "v1"
  },
  "openapi": "3.1.0",
  "paths": {
    "/files/{id}": {
      "get": {
        "operationId": "Files.get_file",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/FileMeta"
                }
              }
            },
            "description": "OK"
          },
          "304": {
            "description": "Error: NotModified",
            "headers": {
              "ETag": {
                "schema": {
                  "type": "string"
                }
              }
            }
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/NotFound"
                }
              }
            },
            "description": "Error: NotFound"
          },
          "412": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/PreconditionFailed"
                }
              }
            },
            "description": "Error: PreconditionFailed",
            "headers": {
              "ETag": {
                "schema": {
                  "type": "string"
                }
              },
              "Set-Cookie": {
                "schema": {
                  "type": "string"
                }
              },
              "X-Hint": {
                "schema": {
                  "items": {
                    "type": "string"
                  },
                  "type": "array"
                }
              }
            }
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "Files"
        ]
      }
    },
    "/scoped": {
      "get": {
        "operationId": "Scoped.read",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "409": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/left.Failure"
                }
              }
            },
            "description": "Error: Failure"
          },
          "422": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/right.Failure"
                }
              }
            },
            "description": "Error: Failure"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "Scoped"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "Files"
    },
    {
      "name": "Scoped"
    }
  ]
}
