xidlc/tests/snapshots/codegen_snapshot__openapi__http_header.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_header.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "test.Status": {
        "enum": [
          "ok",
          "FAILED"
        ],
        "type": "string"
      },
      "test.User": {
        "properties": {
          "full_name": {
            "type": "string"
          },
          "id": {
            "format": "int32",
            "minimum": 0,
            "type": "integer"
          },
          "status": {
            "$ref": "#/components/schemas/test.Status"
          }
        },
        "required": [
          "id",
          "full_name",
          "status"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/v1/headers": {
      "post": {
        "operationId": "test.HeaderService.create_user",
        "parameters": [
          {
            "in": "header",
            "name": "X-Token",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "cookie",
            "name": "sid",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "string"
              }
            }
          }
        },
        "responses": {
          "204": {
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HeaderService"
        ]
      }
    },
    "/v1/headers/{id}": {
      "get": {
        "operationId": "test.HeaderService.get_user",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "format": "int32",
              "minimum": 0,
              "type": "integer"
            }
          },
          {
            "in": "header",
            "name": "X-Req-Id",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "header",
            "name": "X-Flags",
            "required": true,
            "schema": {
              "items": {
                "type": "string"
              },
              "type": "array"
            }
          },
          {
            "in": "header",
            "name": "X-Age",
            "required": true,
            "schema": {
              "format": "int32",
              "minimum": 0,
              "type": "integer"
            }
          },
          {
            "in": "cookie",
            "name": "sid",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "cookie",
            "name": "pref",
            "required": true,
            "schema": {
              "items": {
                "type": "string"
              },
              "type": "array"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/test.User"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HeaderService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HeaderService"
    }
  ]
}
