xidlc/tests/snapshots/codegen_snapshot__openapi__http_response_shape.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_response_shape.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidlc",
    "version": "v1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/add": {
      "post": {
        "operationId": "HttpResponseShapeService.add",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "a": {
                    "format": "int32",
                    "type": "integer"
                  },
                  "b": {
                    "format": "int32",
                    "type": "integer"
                  }
                },
                "required": [
                  "a",
                  "b"
                ],
                "type": "object"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "return": {
                      "format": "int32",
                      "type": "integer"
                    },
                    "sum": {
                      "format": "int32",
                      "type": "integer"
                    }
                  },
                  "required": [
                    "return",
                    "sum"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpResponseShapeService"
        ]
      }
    },
    "/bump": {
      "post": {
        "operationId": "HttpResponseShapeService.bump",
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "format": "int32",
                "type": "integer"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "return": {
                      "format": "int32",
                      "type": "integer"
                    },
                    "value": {
                      "format": "int32",
                      "type": "integer"
                    }
                  },
                  "required": [
                    "return",
                    "value"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpResponseShapeService"
        ]
      }
    },
    "/get_count": {
      "post": {
        "operationId": "HttpResponseShapeService.get_count",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "format": "int32",
                  "type": "integer"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpResponseShapeService"
        ]
      }
    },
    "/hello": {
      "post": {
        "operationId": "HttpResponseShapeService.hello",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpResponseShapeService"
        ]
      }
    },
    "/ping": {
      "post": {
        "operationId": "HttpResponseShapeService.ping",
        "responses": {
          "204": {
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpResponseShapeService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpResponseShapeService"
    }
  ]
}
